--- a/styles.css
+++ b/styles.css
@@ -58,3 +58,37 @@ input {
   button:hover{
     background: #ffb476 !important;
   }
+  p{
+    font-size: 80%;
+    position: absolute;
+    right: 0;
+    margin-right: 1%;
+    margin-top: 1.31%;
+    top:0;
+    z-index:1;
+    padding:0;
+    font-family: 'Montserrat Alternates', sans-serif;
+    color:hsl(0, 0%, 0%)  !important;
+    overflow-wrap: normal;
+  }
+  a, a:hover, a:focus, a:active {
+    text-decoration: none;
+    text-decoration: underline;
+    color: inherit;
+  }
+  a:hover {
+    color:#ffffff;
+  }
+  
+  .link {
+    font-size: 80%;
+    position: absolute;
+    right: 1;
+    margin-top: 1.31%;
+    margin-left: 1%;
+    top:0;
+    z-index:1;
+    padding:0;
+    font-family: 'Montserrat Alternates', sans-serif;
+    color:hsl(0, 0%, 0%)  !important;
+  }
